# Cyrillic_Romanisation_Tool

./: LICENCE  pyproject.toml
release/: cyrillic_romanisation_tool.py
tests/test_database/: abkhaz.txt  belarusian.txt  bulgarian.txt  chechen.txt  kazakh.txt  kyrgyz.txt  macedonian.txt  montenegrin.txt  ossetian.txt  russian.txt  serbian.txt  tajik.txt  turkmen.txt  ukrainian.txt  uzbek.txt
tests/test_languages/: test_language_detection.py
