[tool.poetry]
name = "cyrillic romanisation tool"
version = "0.1.0"
description = "This CLI tool helps you convert cyrillic text in the supported languages into latin characters. It follows the ALA-LC Romanization tables."
authors = ["Elio Molinaro <emolinaro.work@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
